--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -329,13 +329,15 @@
 \cleartorecto
 \backmatter
 
+
 \begingroup
 \hypersetup{hyperindex=true}
 \listofalgorithms
 \endgroup
 
-% \appendix
+\appendix
 % \appendixpage*
+\include{appendix}
 
 % \chapter{Example Programs}
 % \label{sec:appendix}
