--- a/thesis/notation.tex
+++ b/thesis/notation.tex
@@ -35,6 +35,8 @@
     example.
   \item[\(\int \prob{x} \dif x = 1\)] Integrals over the whole domain of a density or measure are
     written as indefinite integrals, where the usage is clear.
+  \item[\(\indicator{z_n = k}\)] Indicator function.  The value is \(1\) when the predicate inside
+    holds, and \(0\) otherwise.
   \item[{\([x, y, z] = \smash[b]{\left(\begin{smallmatrix}x\\y\\z\end{smallmatrix}\right)}\)}] For
     consistency with Julia code, vectors (arrays of rank \(1\)) are written in brackets, with
     elements separated by commas.  Thereby, the form written in a row denotes a column vector;
