--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -774,6 +774,13 @@
   urldate = {2019-10-09}
 }
 
+@book{kallenberg2006foundations,
+  title = {Foundations of Modern Probability},
+  author = {Kallenberg, Olav},
+  date = {2006},
+  publisher = {{Springer Science \& Business Media}}
+}
+
 @article{kelsey1995correspondence,
   title = {A Correspondence between Continuation Passing Style and Static Single Assignment Form},
   author = {Kelsey, Richard A.},
