More feedback incorporated

--- a/thesis/appendix.tex
+++ b/thesis/appendix.tex
@@ -1,8 +1,5 @@
-\chapter{Appendix}
-\label{ch:appendix}
-
-\section{Measure Theory}
-\label{sec:measure-theory}
+\chapter{Measure Theory}
+\label{ch:measure-theory}
 
 Measure theoretic notation \parencite{kallenberg2006foundations} allows to treat both discrete and
 continuous probabilities under a generalized form of measure integrals.  Probability theory always
