--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -318,26 +318,24 @@
 \include{tracking_models}
 \include{discussion}
 
-
-% -------------------------------------------------------------------------------
-% BIBLIOGRAPHY
-\cleartorecto
-\include{bibliography}
-
 % -------------------------------------------------------------------------------
 % APPENDIX
+\appendix
+\appendixpage*
+\include{appendix}
+
+% -------------------------------------------------------------------------------
+% BACK MATTERN
 \cleartorecto
 \backmatter
-
+\include{bibliography}
 
 \begingroup
 \hypersetup{hyperindex=true}
 \listofalgorithms
 \endgroup
 
-\appendix
-% \appendixpage*
-\include{appendix}
+
 
 % \chapter{Example Programs}
 % \label{sec:appendix}
