--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -387,6 +387,17 @@
   langid = {english}
 }
 
+@book{devroye1986nonuniform,
+  title = {Non-Uniform Random Variate Generation},
+  author = {Devroye, Luc},
+  date = {1986},
+  publisher = {{Springer}},
+  location = {{New York}},
+  annotation = {OCLC: 13269466},
+  langid = {english},
+  pagetotal = {843}
+}
+
 @article{elliott2018simple,
   title = {The Simple Essence of Automatic Differentiation},
   author = {Elliott, Conal},
